--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "express-fileupload": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
-    "path": "^0.12.7",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "@vercel/blob": "^0.16.0"
   },
   "description": "",
   "devDependencies": {
